--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mongoose": "~3.6.13",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^1.0.0-rc4"
+    "react-router": "^1.0.0-rc4",
+    "reactfire": "^0.5.1"
   },
   "devDependencies": {
     "flux": "^2.1.1",
