--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "~1.0.1",
     "express": "~4.0.0",
     "mongoose": "~3.6.13",
+    "re-base": "^1.5.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^1.0.0-rc4",
